--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untuk Jeje.</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Hai Jeje.</title>
 
 <style>
 body {
@@ -12,17 +13,18 @@ body {
     align-items: center;
     font-family: monospace;
     color: #00ff88;
-    padding: 40px 0;
+    padding: 20px 10px;
 }
 
 /* Terminal */
 .terminal {
     background: #111;
-    width: 850px;
-    max-width: 95%;
-    padding: 25px;
+    width: 100%;
+    max-width: 900px;
+    padding: 20px;
     border-radius: 14px;
     box-shadow: 0 0 40px rgba(0,255,150,0.4);
+    overflow-x: auto;
 }
 
 .header {
@@ -43,8 +45,8 @@ body {
 
 #content {
     white-space: pre;
-    font-size: 13px;
-    line-height: 1.25;
+    font-size: clamp(8px, 2.3vw, 14px);
+    line-height: 1.3;
 }
 
 .cursor {
@@ -55,14 +57,14 @@ body {
 }
 
 @keyframes blink {
-    0%, 50%, 100% { opacity: 1; }
-    25%, 75% { opacity: 0; }
+    0%,50%,100% { opacity:1; }
+    25%,75% { opacity:0; }
 }
 
 .spotify {
-    margin-top: 30px;
-    width: 850px;
-    max-width: 95%;
+    margin-top: 25px;
+    width: 100%;
+    max-width: 900px;
     display: none;
 }
 </style>
@@ -83,7 +85,7 @@ body {
   <iframe style="border-radius:12px"
     src="https://open.spotify.com/embed/track/2UgCs0i0rNHUH2jKE5NZHE"
     width="100%" height="152"
-    frameBorder="0"
+    frameborder="0"
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
   </iframe>
 </div>
@@ -128,16 +130,16 @@ function romanticize(template, name) {
     return result;
 }
 
-const heart = romanticize(heartTemplate, name);
-
 const fakeCommand = `
 > initializing...
 > scanning data...
-> target found: ${name}
-> injecting data...
+> target found: Hai, Je!
+> injecting...
 > status: SUCCESS
 
 `;
+
+const heart = romanticize(heartTemplate, name);
 
 const message = `
 Every time you smile, a flower blooms in my soul ${name}.
