--- a/index.html
+++ b/index.html
@@ -142,17 +142,21 @@ const fakeCommand = `
 const heart = romanticize(heartTemplate, name);
 
 const message = `
-Every time you smile, a flower blooms in my soul ${name}.
-in a world full of worries, you are my moment of happiness.
+Untuk perempuanku, ${name}.
+in a world full of harsh bright lights, you are my warm soft light.
 I Pray For You, Happy Valentine's Day!
 
-i know you're tired, i know life has'nt been easy lately, 
-but i also know how strong you are.
-you carry so much more than anyone realizes...
-just know this, i see you, i believe in you,
-in the day that no one stand up for you,
-i always here for you. 
+if i could give you one thing in life,
+i would give you the ability to see
+yourself throught my eyes.
+because only then you would realize
+how special you are.
+ 
+just remember this,
 you're never alone, not while i'm still breathing.
+
+"jangan khawatir, di dalam badai,
+kamu akan menemukan matahari terbitmu."
 
 This song is for you...
 Sempurna - Andra & The Backbone
@@ -179,3 +183,4 @@ typeWriter();
 
 </body>
 </html>
+
