--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@ const heart = romanticize(heartTemplate, name);
 
 const message = `
 Untuk perempuanku, ${name}.
-in a world full of harsh bright lights, you are my warm soft light.
+in a world full of harsh bright lights, 
+you are my warm soft light.
 I Pray For You, Happy Valentine's Day!
 
 if i could give you one thing in life,
@@ -154,9 +155,6 @@ how special you are.
  
 just remember this,
 you're never alone, not while i'm still breathing.
-
-"jangan khawatir, di dalam badai,
-kamu akan menemukan matahari terbitmu."
 
 This song is for you...
 Sempurna - Andra & The Backbone
@@ -183,4 +181,5 @@ typeWriter();
 
 </body>
 </html>
+
 
